// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVInputWithSelector > renders correctly 1`] = `
<div
  class="position-relative"
  data-v-ebd80fe4=""
>
  
  <evocon-v-input-stub
    data-v-ebd80fe4=""
    filled="true"
    grow="false"
    modelvalue="text"
    truncateinput="false"
    type="text"
    usechip="false"
  />
  <div
    class="input-selector"
    data-v-ebd80fe4=""
  >
    <div
      data-v-ebd80fe4=""
      style="width: 100px;"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-ebd80fe4=""
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="first,second"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue="second"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </div>
  </div>
  
</div>
`;

exports[`EvoconVInputWithSelector > renders correctly with number type 1`] = `
<div
  class="position-relative"
  data-v-ebd80fe4=""
>
  
  <evocon-number-input-stub
    allowfloat="true"
    allownegative="false"
    data-v-ebd80fe4=""
    grow="false"
    maxvalue="999999999999999"
    modelvalue="123"
    usechip="false"
  />
  <div
    class="input-selector"
    data-v-ebd80fe4=""
  >
    <div
      data-v-ebd80fe4=""
      style="width: 100px;"
    >
      <selection-input-stub
        checkbox="true"
        class="input-selector"
        coloractiveprepend="false"
        data-v-ebd80fe4=""
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="first,second"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue="second"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </div>
  </div>
  
</div>
`;

exports[`EvoconVInputWithSelector > renders correctly with single item 1`] = `
<div
  class="position-relative"
  data-v-ebd80fe4=""
>
  
  <evocon-v-input-stub
    data-v-ebd80fe4=""
    filled="true"
    grow="false"
    modelvalue="text"
    suffix="second"
    truncateinput="false"
    type="text"
    usechip="false"
  />
  <div
    class="input-selector"
    data-v-ebd80fe4=""
  >
    <div
      data-v-ebd80fe4=""
      style="width: 100px;"
    >
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
